fix(build): restore debug assemble by reconciling Java API drift and native CRC path